# test-foobarcomp

./: CMakeLists.txt  README.md
cmake/: foobar2000_sdk.cmake
docs/: token_helper.ps1
include/: apple_music_auth.hpp  apple_music_client.hpp  apple_music_login_dialog.hpp  apple_music_models.hpp  apple_music_preferences.hpp  playlist_sync_service.hpp
res/: foo_apple_music.rc  resource.h
src/: apple_music_auth.cpp  apple_music_client.cpp  apple_music_input.cpp  apple_music_login_dialog.cpp  component_entry.cpp  foo_apple_music.cpp  playlist_sync_service.cpp  preferences.cpp
